--- a/web/package.json
+++ b/web/package.json
@@ -29,7 +29,8 @@
     "react-hook-form": "^7.51.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
